# hello-scamp

./: .gitignore  BitVector.h  CMakeLists.txt  ClockRecovery.h  ClockRecoveryDLL.cpp  ClockRecoveryDLL.h  ClockRecoveryPLL.cpp  ClockRecoveryPLL.h  CodeWord12.cpp  CodeWord12.h  CodeWord24.cpp  CodeWord24.h  DataListener.h  Decoder.h  Demodulator.cpp  Demodulator.h  DemodulatorListener.h  Encoder.cpp  Encoder.h  FileModulator.cpp  FileModulator.h  Frame30.cpp  Frame30.h  FrameReceiver.cpp  FrameReceiver.h  FrameSender.h  FrameSenderImpl.cpp  FrameSenderImpl.h  Makefile  Modulator.h  README.md  SimpleFFT.cpp  SimpleFFT.h  Symbol6.cpp  Symbol6.h  TestDemodulatorListener.cpp  TestDemodulatorListener.h  TestModem.cpp  TestModem.h  TestModem2.cpp  (+25 more)
demo/: AK1WI-SCAMP-40m-2000.txt  AK1WI-SCAMP-40m.txt
